ejercicio post de instagram terminado

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <i class="fa-regular fa-bookmark"></i>
                 </div>
                 </div>
-             <p class="likes"> By like <strong>4GeeksAcademy</strong>, <strong>html5</strong>, </strong>Web</strong> and <strong>100.000 others</strong> </p>
+             <p class="likes"> By like <strong>4GeeksAcademy</strong>, <strong>html5</strong>, <strong>Web</strong> and <strong>100.000 others</strong> </p>
             <p class="caption"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci ex animi quod, quis est provident cupiditate qui dolorem harum, quae obcaecati tempore nemo unde magnam cumque repellendus illum voluptatum labore! </p>
                 
         </div>
